@startuml diagram

class Map{
   - features[]: Feature
   - filePath: String
   - settingsPath: String
   + update(p1:Point, p2:Point) : Mesh[]
   ---
   + Map(filePath: String, settingsPath: String)
}

class Point{
   - x
   - y
   ---
   + Point(x: int, y: int)
}

class Feature{
   - name: String
   - p : Point[]
   - cat : Category
   ---
   + Feature(name: String, p: Point[], cat : Category)
}


class Category{
   - name: String
   - fillColor: String
   - strokeColor: String
   - textColor: String
   - police: String
   - level: int
   - icon: Image
   - zoomable: bool
   - displayName: bool
   - extendsFrom: String[]
   'pour le pathfinding
   - attribut: String[]
   ---
   + Category(name: String,
   fillColor: String,
   strokeColor: String,
   textColor: String,
   police: String,
   level: int,
   icon: Image,
   zoomable: bool,
   displayName: bool)
}
class Image{
   - path : String
   ---
   + Image(path: String)
}

Feature --o Point
Feature - Map
Category - Image
Category --o Feature

@enduml